# src/configs/swagger.json
@@ -42,22 +42,26 @@
   "paths": {
     "/auth/login": {
       "post": {
-        "description": "",
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "Login",
+        "description": "Login with username (or email) and password for get simpleToken and JWT",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "username": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "test"
                 },
                 "password": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "aA?123456"
                 }
               }
             }
@@ -72,7 +76,11 @@
     },
     "/auth/refresh": {
       "post": {
-        "description": "",
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "JWT: Refresh",
+        "description": "Refresh token.",
         "responses": {
           "200": {
             "description": "OK"
@@ -82,7 +90,11 @@
     },
     "/auth/logout": {
       "get": {
-        "description": "",
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "simpleToken: Logout",
+        "description": "Delete token key.",
         "responses": {
           "200": {
             "description": "OK"
@@ -92,7 +104,11 @@
     },
     "/users/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "summary": "List Users",
+        "description": "\r  You can send query with endpoint for filter[], search[], sort[], page and limit.\r  <ul> Examples:\r   <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>\r   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r   <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
         "responses": {
           "200": {
             "description": "OK"
@@ -100,6 +116,10 @@
         }
       },
       "post": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Create User",
         "description": "",
         "parameters": [
           {
@@ -122,6 +142,10 @@
         }
       },
       "put": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Update User",
         "description": "",
         "parameters": [
           {
@@ -150,6 +174,10 @@
         }
       },
       "patch": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Update User",
         "description": "",
         "parameters": [
           {
@@ -180,6 +208,10 @@
     },
     "/users/{id}": {
       "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Get Single User",
         "description": "",
         "parameters": [
           {
@@ -196,6 +228,10 @@
         }
       },
       "put": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Update User",
         "description": "",
         "parameters": [
           {
@@ -246,6 +282,10 @@
         }
       },
       "patch": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Update User",
         "description": "",
         "parameters": [
           {
@@ -300,6 +340,10 @@
     },
     "/tokens/{id}": {
       "get": {
+        "tags": [
+          "Tokens"
+        ],
+        "summary": "Get Single Token",
         "description": "",
         "parameters": [
           {
@@ -384,6 +428,10 @@
     },
     "/houses/{id}": {
       "get": {
+        "tags": [
+          "Houses"
+        ],
+        "summary": "Get Single House",
         "description": "",
         "parameters": [
           {
@@ -450,7 +498,11 @@
     },
     "/reservations/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Reservations"
+        ],
+        "summary": "List Reservations",
+        "description": "\r  You can send query with endpoint for filter[], search[], sort[], page and limit.\r  <ul> Examples:\r   <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>\r   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r   <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
         "responses": {
           "200": {
             "description": "OK"
@@ -458,6 +510,10 @@
         }
       },
       "post": {
+        "tags": [
+          "Reservations"
+        ],
+        "summary": "Create Reservation",
         "description": "",
         "parameters": [
           {
@@ -500,6 +556,10 @@
     },
     "/reservations/{id}": {
       "get": {
+        "tags": [
+          "Reservations"
+        ],
+        "summary": "Get Single Reservation",
         "description": "",
         "parameters": [
           {
@@ -516,6 +576,10 @@
         }
       },
       "put": {
+        "tags": [
+          "Reservations"
+        ],
+        "summary": "Update Reservation",
         "description": "",
         "parameters": [
           {
@@ -572,6 +636,10 @@
         }
       },
       "patch": {
+        "tags": [
+          "Reservations"
+        ],
+        "summary": "Update Reservation",
         "description": "",
         "parameters": [
           {
