# src/controllers/auth.js
@@ -7,6 +7,19 @@ const jwt=require('jsonwebtoken')
 
 module.exports = {
   login: async (req, res) => {
+       /*
+            #swagger.tags = ["Authentication"]
+            #swagger.summary = "Login"
+            #swagger.description = 'Login with username (or email) and password for get simpleToken and JWT'
+            #swagger.parameters["body"] = {
+                in: "body",
+                required: true,
+                schema: {
+                    "username": "test",
+                    "password": "aA?123456",
+                }
+            }
+        */
     const { username, email, password } = req.body;
     if ((username || email) && password) {
       const user = await User.findOne({ $or: [{ username }, { email }] });
@@ -72,6 +85,11 @@ module.exports = {
     }
   },
   refresh: async (req, res) => {
+      /*
+            #swagger.tags = ["Authentication"]
+            #swagger.summary = "JWT: Refresh"
+            #swagger.description = 'Refresh token.'
+        */
     const refreshToken = req.body?.bearer?.refresh;
 
     if (refreshToken) {
@@ -105,6 +123,11 @@ module.exports = {
     }
   },
   logout: async (req, res) => {
+     /*
+            #swagger.tags = ["Authentication"]
+            #swagger.summary = "simpleToken: Logout"
+            #swagger.description = 'Delete token key.'
+        */
     const auth = req.headers?.authorization;
     const tokenKey = auth ? auth.split(" ") : null;
     if (tokenKey[0] == "Token") {
